--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ and open the template in the editor.
 
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link href="http://fonts.googleapis.com/css?family=Open+Sans:400" rel="stylesheet">
-        <link href="css/base.css" rel="stylesheet">
+        <link href="css/style.css" rel="stylesheet">
         <script defer src="js/model.js"></script>
         <script defer src="js/view.js"></script>
         <script defer src="js/presenter.js"></script>
