--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@ and open the template in the editor.
 
 <body>
     <header class="header">
-        <i class="fas fa-volleyball-ball"></i>
-        <h1>Single-Page-App</h1>
+        <i class="fa fa-trash xs" style="float: left; margin-left: 30px;"></i>
+        <h1 style="float: left; margin-left: 100px;">Search'N'Sports</h1>
         <div class="loginButton">
         </div>
     </header>
