--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ and open the template in the editor.
 
 <html>
 
-<head lang="en">
+<head lang="de">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta charset="utf-8">
 
