make some site-templates hidden for development; adjust sidebar positiom

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ and open the template in the editor.
             </div>
         </div>
         <hr>
-        <div id="Blogpost_Detail">
+        <div id="Blogpost_Detail" hidden>
             <div id="Sidebar" class="sidebar">
                 <h4>Sportligen</h4>
                 <button id="CategoryButton" class="categoryBtn"> NFL</button>
@@ -83,7 +83,7 @@ and open the template in the editor.
             </div>
         </div>
         <hr>
-        <div id="Category_Overview">
+        <div id="Category_Overview" hidden>
             <div id="Sidebar" class="sidebar">
                 <h4>Sportligen</h4>
                 <button id="CategoryButton" class="categoryBtn"> NFL</button>
