--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@ and open the template in the editor.
 </head>
 
 <body>
-    <header class="header">
+    
+    <header class="ueberschrift">
+        <h1>Sport & Search</h1>
     </header>
     <hr>
 
@@ -36,23 +38,23 @@ and open the template in the editor.
         <div id="Blog_Overview">
             <div id="Sidebar" class="sidebar">
                 <i class="fa fa-trash xs" style="float: left; margin-left: 30px;"></i>
-                <h4>Sportligen</h4>
-                <button id="CategoryButton" class="categoryBtn"> NFL</button>
-                <button id="CategoryButton" class="categoryBtn"> NBA</button>
-                <button id="CategoryButton" class="categoryBtn"> Bundesliga</button>
-                <button id="CategoryButton" class="categoryBtn"> NHL</button>
+                <h4 class = "ueberschrift">Sportligen</h4>
+                <button id="CategoryButton" class="categoryBtn"> <img src ="https://upload.wikimedia.org/wikipedia/de/thumb/1/12/National_Football_League_2008.svg/1200px-National_Football_League_2008.svg.png" style="width: 60px"  ></button>
+                <button id="CategoryButton" class="categoryBtn"> <img src ="https://upload.wikimedia.org/wikipedia/de/thumb/1/12/National_Football_League_2008.svg/1200px-National_Football_League_2008.svg.png" style="width: 60px"></button>
+                <button id="CategoryButton" class="categoryBtn"> <img src ="https://upload.wikimedia.org/wikipedia/de/thumb/1/12/National_Football_League_2008.svg/1200px-National_Football_League_2008.svg.png" style="width: 60px"></button>
+                <button id="CategoryButton" class="categoryBtn"> <img src ="https://upload.wikimedia.org/wikipedia/de/thumb/1/12/National_Football_League_2008.svg/1200px-National_Football_League_2008.svg.png" style="width: 60px"></button>
             </div>
             <div id="News" class="siteContent">
                 <div class="loginButton">
                 </div>
                 <h3>News</h3>
-                <div id="Blogpost">
-                    <img style="width: 500px;"
+                <div id="Blogpost" class = "blogPost">
+                    <img style="width: 800px;"
                         src="https://www.deutschlandfunk.de/media/thumbs/5/5a454c2de10a75b09a69b3a66a370a8ev1_max_755x424_b3535db83dc50e27c1bb1392364c95a2.jpg?key=4396a9"
                         alt="Edit">
-                    <text>Beim lange Zeit ungefährdeten 28:22 des Super-Bowl-Champions
-                        am Donnerstag (Ortszeit) bei den Philadelphia Eagles
-                        warf der 44-Jährige Routinier zwei Touchdowns.
+                    <text id = "kurzeInfo" class="kurzeInformationZurSchlagzeile">Beim lange Zeit ungefährdeten 28:22 des Super-Bowl-Champions
+                        am Donnerstag (Ortszeit) <br>bei den Philadelphia Eagles
+                        warf der 44-Jährige Routinier zwei Touchdowns.<br>
                         Die Bucs bleiben durch den fünften Erfolg im
                         sechsten Spiel an der Spitze der NFC South.
                     </text>
@@ -85,7 +87,7 @@ and open the template in the editor.
         <hr>
         <div id="Category_Overview" hidden>
             <div id="Sidebar" class="sidebar">
-                <h4>Sportligen</h4>
+                <h4 style ="font-family: sans-serif;">Sportligen</h4>
                 <button id="CategoryButton" class="categoryBtn"> NFL</button>
                 <button id="CategoryButton" class="categoryBtn"> NBA</button>
                 <button id="CategoryButton" class="categoryBtn"> Bundesliga</button>
@@ -149,7 +151,6 @@ and open the template in the editor.
     <footer id="footer">
         <div> ENDE DER SEITE</div>
     </footer>
-
 
 </body>
 
