--- a/index.html
+++ b/index.html
@@ -36,20 +36,34 @@ and open the template in the editor.
     <div id="templates">
         <hr>
         <div id="Blog_Overview">
+            <div class="titleContainer">
+                <h4 class = "title">Sportligen</h4>
+            </div>
             <div id="Sidebar" class="sidebar">
-                <i class="fa fa-trash xs" style="float: left; margin-left: 30px;"></i>
-                <h4 class = "ueberschrift">Sportligen</h4>
-                <button id="CategoryButton" class="categoryBtn"> <img src ="https://upload.wikimedia.org/wikipedia/de/thumb/1/12/National_Football_League_2008.svg/1200px-National_Football_League_2008.svg.png" style="width: 60px"  ></button>
-                <button id="CategoryButton" class="categoryBtn"> <img src ="https://upload.wikimedia.org/wikipedia/de/thumb/1/12/National_Football_League_2008.svg/1200px-National_Football_League_2008.svg.png" style="width: 60px"></button>
-                <button id="CategoryButton" class="categoryBtn"> <img src ="https://upload.wikimedia.org/wikipedia/de/thumb/1/12/National_Football_League_2008.svg/1200px-National_Football_League_2008.svg.png" style="width: 60px"></button>
-                <button id="CategoryButton" class="categoryBtn"> <img src ="https://upload.wikimedia.org/wikipedia/de/thumb/1/12/National_Football_League_2008.svg/1200px-National_Football_League_2008.svg.png" style="width: 60px"></button>
+                <!-- <i class="fa fa-trash xs" style="float: left; margin-left: 30px;" ></i> -->
+                
+                
+                <div class="CategoryBtnContainer">
+                    <button id="CategoryButton" class="categoryBtn"> <img class="categoryLogo" src ="https://upload.wikimedia.org/wikipedia/de/thumb/1/12/National_Football_League_2008.svg/1200px-National_Football_League_2008.svg.png"   ></button>
+                    <button id="CategoryButton" class="categoryBtn"> <img class="categoryLogo" src ="https://upload.wikimedia.org/wikipedia/de/thumb/1/12/National_Football_League_2008.svg/1200px-National_Football_League_2008.svg.png" ></button>
+                    <button id="CategoryButton" class="categoryBtn"> <img class="categoryLogo" src ="https://upload.wikimedia.org/wikipedia/de/thumb/1/12/National_Football_League_2008.svg/1200px-National_Football_League_2008.svg.png" ></button>
+                    <button id="CategoryButton" class="categoryBtn"> <img class="categoryLogo" src ="https://upload.wikimedia.org/wikipedia/de/thumb/1/12/National_Football_League_2008.svg/1200px-National_Football_League_2008.svg.png" ></button>
+                    <button id="CategoryButton" class="categoryBtn"> <img class="categoryLogo" src ="https://upload.wikimedia.org/wikipedia/de/thumb/1/12/National_Football_League_2008.svg/1200px-National_Football_League_2008.svg.png"   ></button>
+                    <button id="CategoryButton" class="categoryBtn"> <img class="categoryLogo" src ="https://upload.wikimedia.org/wikipedia/de/thumb/1/12/National_Football_League_2008.svg/1200px-National_Football_League_2008.svg.png" ></button>
+                    <button id="CategoryButton" class="categoryBtn"> <img class="categoryLogo" src ="https://upload.wikimedia.org/wikipedia/de/thumb/1/12/National_Football_League_2008.svg/1200px-National_Football_League_2008.svg.png" ></button>
+                    <button id="CategoryButton" class="categoryBtn"> <img class="categoryLogo" src ="https://upload.wikimedia.org/wikipedia/de/thumb/1/12/National_Football_League_2008.svg/1200px-National_Football_League_2008.svg.png" ></button>
+                    <button id="CategoryButton" class="categoryBtn"> <img class="categoryLogo" src ="https://upload.wikimedia.org/wikipedia/de/thumb/1/12/National_Football_League_2008.svg/1200px-National_Football_League_2008.svg.png"   ></button>
+                    <button id="CategoryButton" class="categoryBtn"> <img class="categoryLogo" src ="https://upload.wikimedia.org/wikipedia/de/thumb/1/12/National_Football_League_2008.svg/1200px-National_Football_League_2008.svg.png" ></button>
+                    <button id="CategoryButton" class="categoryBtn"> <img class="categoryLogo" src ="https://upload.wikimedia.org/wikipedia/de/thumb/1/12/National_Football_League_2008.svg/1200px-National_Football_League_2008.svg.png" ></button>
+                    <button id="CategoryButton" class="categoryBtn"> <img class="categoryLogo" src ="https://upload.wikimedia.org/wikipedia/de/thumb/1/12/National_Football_League_2008.svg/1200px-National_Football_League_2008.svg.png" ></button>
+                </div>
             </div>
             <div id="News" class="siteContent">
                 <div class="loginButton">
                 </div>
                 <h3>News</h3>
                 <div id="Blogpost" class = "blogPost">
-                    <img style="width: 800px;"
+                    <img class="categoryLogo" style="width: 800px;"
                         src="https://www.deutschlandfunk.de/media/thumbs/5/5a454c2de10a75b09a69b3a66a370a8ev1_max_755x424_b3535db83dc50e27c1bb1392364c95a2.jpg?key=4396a9"
                         alt="Edit">
                     <text id = "kurzeInfo" class="kurzeInformationZurSchlagzeile">Beim lange Zeit ungefährdeten 28:22 des Super-Bowl-Champions
@@ -72,7 +86,7 @@ and open the template in the editor.
             </div>
             <div id="Details" class="siteContent">
                 <div id="Blogpost">
-                    <img style="width: 500px; margin-top: 100px;"
+                    <img class="categoryLogo" style="width: 500px; margin-top: 100px;"
                         src="https://www.deutschlandfunk.de/media/thumbs/5/5a454c2de10a75b09a69b3a66a370a8ev1_max_755x424_b3535db83dc50e27c1bb1392364c95a2.jpg?key=4396a9"
                         href="https://www.youtube.com/watch?v=Z_xUiW-ozHw&ab_channel=NFL" alt="Edit">
                     <text>Beim lange Zeit ungefährdeten 28:22 des Super-Bowl-Champions
@@ -96,7 +110,7 @@ and open the template in the editor.
             <div id="News" class="siteContent">
                 <h3>NFL</h3>
                 <div id="Blogpost">
-                    <img style="width: 500px;"
+                    <img class="categoryLogo" style="width: 500px;"
                         src="https://www.deutschlandfunk.de/media/thumbs/5/5a454c2de10a75b09a69b3a66a370a8ev1_max_755x424_b3535db83dc50e27c1bb1392364c95a2.jpg?key=4396a9"
                         alt="Edit">
                     <text>Beim lange Zeit ungefährdeten 28:22 des Super-Bowl-Champions
@@ -137,8 +151,8 @@ and open the template in the editor.
         </div>
 
         <ul id="buttons" hidden>
-            <li><img class="icon" src="/img/edit.svg" alt="Edit"></li>
-            <li><img class="icon" src="/img/garbage.svg" alt="Delete"></li>
+            <li><img class="categoryLogo" class="icon" src="/img class="categoryLogo"/edit.svg" alt="Edit"></li>
+            <li><img class="categoryLogo" class="icon" src="/img class="categoryLogo"/garbage.svg" alt="Delete"></li>
         </ul>
 
         <div id="contact" hidden>
