--- a/index.html
+++ b/index.html
@@ -36,13 +36,10 @@ and open the template in the editor.
     <div id="templates">
         <hr>
         <div id="Blog_Overview">
-            <div class="titleContainer">
-                <h4 class = "title">Sportligen</h4>
-            </div>
             <div id="Sidebar" class="sidebar">
-                <!-- <i class="fa fa-trash xs" style="float: left; margin-left: 30px;" ></i> -->
-                
-                
+                <div class="titleContainer">
+                    <div class = "title">Sportligen</div>
+                </div> 
                 <div class="CategoryBtnContainer">
                     <button id="CategoryButton" class="categoryBtn"> <img class="categoryLogo" src ="https://upload.wikimedia.org/wikipedia/de/thumb/1/12/National_Football_League_2008.svg/1200px-National_Football_League_2008.svg.png"   ></button>
                     <button id="CategoryButton" class="categoryBtn"> <img class="categoryLogo" src ="https://upload.wikimedia.org/wikipedia/de/thumb/1/12/National_Football_League_2008.svg/1200px-National_Football_League_2008.svg.png" ></button>
