first main page prototype finished

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ and open the template in the editor.
     <script defer src="js/router.js"></script>
 </head>
 
-<body>
+<body class="main">
     
     <header class="ueberschrift" hidden>
         <h1>Sport & Search</h1>
@@ -33,8 +33,8 @@ and open the template in the editor.
     </main>
 
 
-    <div id="templates">
-        <hrhidden>
+    <div id="templates>
+        <hr hidden>
         <div id="Blog_Overview">
             <div id="Sidebar" class="sidebar">
                 <div class="titleContainer">
@@ -58,18 +58,50 @@ and open the template in the editor.
             <div id="News" class="siteContent">
                 <div id="ContentHeader" class="contentHeader">
                     <div class="vertical-center">
-                        <div id="ContentTitle" class="contentTitle">Search & Sports</div>
+                        <div id="ContentTitle" class="contentTitle">Sport & Search</div>
                     </div>
                     <button class="loginButton" hidden></button>
                 </div>
-                <div id="Blogpost" class = "blogPost" >
+                <div id="Blogpost" class = "blogPost">
                     <div class="imageContainer">
                         <img class="contentImage" alt="Sportbild"
                         src="https://www.deutschlandfunk.de/media/thumbs/5/5a454c2de10a75b09a69b3a66a370a8ev1_max_755x424_b3535db83dc50e27c1bb1392364c95a2.jpg?key=4396a9"
-                        alt="Edit">
+                        alt="Edit" >
                     </div>
                     <div class="textContainer">
-                    <p id = "kurzeInfo" class="kurzeInformationZurSchlagzeile">Beim lange Zeit ungefährdeten 28:22 des Super-Bowl-Champions am Donnerstag (Ortszeit) bei den Philadelphia Eagles </p>
+                        <div id = "kurzeInfo" class="kurzeInformationZurSchlagzeile">Beim lange Zeit ungefährdeten 28:22 des Super-Bowl-Champions
+                            am Donnerstag (Ortszeit) bei den Philadelphia Eagles
+                            warf der 44-Jährige Routinier zwei Touchdowns.
+                            Die Bucs bleiben durch den fünften Erfolg im
+                            sechsten Spiel an der Spitze der NFC South.</div>
+                    </div>
+                </div>
+                <div id="Blogpost" class = "blogPost">
+                    <div class="imageContainer">
+                        <img class="contentImage" alt="Sportbild"
+                        src="https://www.deutschlandfunk.de/media/thumbs/5/5a454c2de10a75b09a69b3a66a370a8ev1_max_755x424_b3535db83dc50e27c1bb1392364c95a2.jpg?key=4396a9"
+                        alt="Edit" >
+                    </div>
+                    <div class="textContainer">
+                        <div id = "kurzeInfo" class="kurzeInformationZurSchlagzeile">Beim lange Zeit ungefährdeten 28:22 des Super-Bowl-Champions
+                            am Donnerstag (Ortszeit) bei den Philadelphia Eagles
+                            warf der 44-Jährige Routinier zwei Touchdowns.
+                            Die Bucs bleiben durch den fünften Erfolg im
+                            sechsten Spiel an der Spitze der NFC South.</div>
+                    </div>
+                </div>
+                <div id="Blogpost" class = "blogPost">
+                    <div class="imageContainer">
+                        <img class="contentImage" alt="Sportbild"
+                        src="https://www.deutschlandfunk.de/media/thumbs/5/5a454c2de10a75b09a69b3a66a370a8ev1_max_755x424_b3535db83dc50e27c1bb1392364c95a2.jpg?key=4396a9"
+                        alt="Edit" >
+                    </div>
+                    <div class="textContainer">
+                        <div id = "kurzeInfo" class="kurzeInformationZurSchlagzeile">Beim lange Zeit ungefährdeten 28:22 des Super-Bowl-Champions
+                            am Donnerstag (Ortszeit) bei den Philadelphia Eagles
+                            warf der 44-Jährige Routinier zwei Touchdowns.
+                            Die Bucs bleiben durch den fünften Erfolg im
+                            sechsten Spiel an der Spitze der NFC South.</div>
                     </div>
                 </div>
             </div>
