--- a/index.html
+++ b/index.html
@@ -16,10 +16,13 @@ and open the template in the editor.
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="http://fonts.googleapis.com/css?family=Open+Sans:400" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
-    <script defer src="js/model.js"></script>
+    <!-- <script defer src="js/model.js"></script>
     <script defer src="js/view.js"></script>
     <script defer src="js/presenter.js"></script>
-    <script defer src="js/router.js"></script>
+    <script defer src="js/router.js"></script> -->
+    <!-- <script defer src="js/test.js"></script> -->
+    <!-- <script defer src="js/aufgabe4.js"></script> -->
+    <script defer src="js/aufgabe5.js" use strict></script>
 </head>
 
 <body class="main">
