UBG_5 weiter bearbeitet hab ein Bild ins repos aufgenommen, da der Link nicht mehr funktioniert hat

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@ and open the template in the editor.
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="http://fonts.googleapis.com/css?family=Open+Sans:400" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
-    <!-- <script defer src="js/model.js"></script>
+    <!-- <script defer src="js/model.js"></script> -->
     <script defer src="js/view.js"></script>
-    <script defer src="js/presenter.js"></script>
-    <script defer src="js/router.js"></script> -->
+    <!--<script defer src="js/presenter.js"></script>-->
+    <!-- <script defer src="js/router.js"></script> -->
     <!-- <script defer src="js/test.js"></script> -->
     <!-- <script defer src="js/aufgabe4.js"></script> -->
     <script defer src="js/aufgabe5.js" use strict></script>
@@ -36,7 +36,7 @@ and open the template in the editor.
     </main>
 
 
-    <div id="templates>
+    <div id="templates">
         <hr hidden>
         <div id="Blog_Overview">
             <div id="Sidebar" class="sidebar">
@@ -68,7 +68,7 @@ and open the template in the editor.
                 <div id="Blogpost" class = "blogPost">
                     <div class="imageContainer">
                         <img class="contentImage" alt="Sportbild"
-                        src="https://www.deutschlandfunk.de/media/thumbs/5/5a454c2de10a75b09a69b3a66a370a8ev1_max_755x424_b3535db83dc50e27c1bb1392364c95a2.jpg?key=4396a9"
+                        src="îmages\technik-taktik-kraft-beim.jpg"
                         alt="Edit" >
                     </div>
                     <div class="textContainer">
@@ -82,7 +82,7 @@ and open the template in the editor.
                 <div id="Blogpost" class = "blogPost">
                     <div class="imageContainer">
                         <img class="contentImage" alt="Sportbild"
-                        src="https://www.deutschlandfunk.de/media/thumbs/5/5a454c2de10a75b09a69b3a66a370a8ev1_max_755x424_b3535db83dc50e27c1bb1392364c95a2.jpg?key=4396a9"
+                        src="îmages\technik-taktik-kraft-beim.jpg"
                         alt="Edit" >
                     </div>
                     <div class="textContainer">
@@ -96,7 +96,7 @@ and open the template in the editor.
                 <div id="Blogpost" class = "blogPost">
                     <div class="imageContainer">
                         <img class="contentImage" alt="Sportbild"
-                        src="https://www.deutschlandfunk.de/media/thumbs/5/5a454c2de10a75b09a69b3a66a370a8ev1_max_755x424_b3535db83dc50e27c1bb1392364c95a2.jpg?key=4396a9"
+                        src="îmages\technik-taktik-kraft-beim.jpg"
                         alt="Edit" >
                     </div>
                     <div class="textContainer">
@@ -121,7 +121,7 @@ and open the template in the editor.
             <div id="Details" class="siteContent">
                 <div id="Blogpost">
                     <img class="categoryLogo" style="width: 500px; margin-top: 100px;"
-                        src="https://www.deutschlandfunk.de/media/thumbs/5/5a454c2de10a75b09a69b3a66a370a8ev1_max_755x424_b3535db83dc50e27c1bb1392364c95a2.jpg?key=4396a9"
+                        src="îmages\technik-taktik-kraft-beim.jpg"
                         href="https://www.youtube.com/watch?v=Z_xUiW-ozHw&ab_channel=NFL" alt="Edit">
                     <text>Beim lange Zeit ungefährdeten 28:22 des Super-Bowl-Champions
                         am Donnerstag (Ortszeit) bei den Philadelphia Eagles
@@ -145,7 +145,7 @@ and open the template in the editor.
                 <h3>NFL</h3>
                 <div id="Blogpost">
                     <img class="categoryLogo" style="width: 500px;"
-                        src="https://www.deutschlandfunk.de/media/thumbs/5/5a454c2de10a75b09a69b3a66a370a8ev1_max_755x424_b3535db83dc50e27c1bb1392364c95a2.jpg?key=4396a9"
+                        src="îmages\technik-taktik-kraft-beim.jpg"
                         alt="Edit">
                     <text>Beim lange Zeit ungefährdeten 28:22 des Super-Bowl-Champions
                         am Donnerstag (Ortszeit) bei den Philadelphia Eagles
@@ -171,6 +171,19 @@ and open the template in the editor.
                 </li>
             </ul>
             <button type="button"> Person hinzufügen </button>
+        </div>
+
+        <div id="UBG_5" hidden>
+            max
+            <input type="number" id="max">
+            min
+            <input type="number" id="min">
+            step
+            <input type="number" id="step">
+            <button id="read">read</button>
+            <button id="up">up</button>
+            <button id="down">down</button>
+            <h1 id="temp"></h1>
         </div>
 
         <div id="detail" hidden>
